# lumen

./: Cargo.toml  LICENSE  README.md  flake.nix
src/: ai_prompt.rs  commit_reference.rs  error.rs  main.rs
src/command/: draft.rs  explain.rs  list.rs  mod.rs
src/config/: cli.rs  configuration.rs  mod.rs
src/git_entity/: commit.rs  diff.rs  mod.rs
src/provider/: claude.rs  gemini.rs  groq.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  phind.rs
