[package]
name = "lumen"
version = "1.7.1"
edition = "2021"
license = "MIT"
description = "lumen is a command-line tool that uses AI to generate commit messages, summarise git diffs or past commits, and more without requiring an API key."
keywords = ["cli", "terminal", "ai", "git", "commit"]
categories = ["command-line-interface", "command-line-utilities"]
repository = "https://github.com/jnsahaj/lumen"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1.83"
spinoff = { version = "0.8.0", features = ["dots"] }
thiserror = "1.0"
indoc = "2.0.5"

[profile.release]
lto = true
